--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "bin": {
+    "codegen": "./src/index.js"
+  },
   "scripts": {
+    "start": "cross-env NODE_ENV=dev node src/index.js skeleton -c product -c person -c colors",
     "test": " cross-env NODE_OPTIONS=--experimental-vm-modules npx jest --runInBand --no-cache --watchAll --config jest.config.mjs",
     "test:cov": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest --config jest.config.mjs --coverage"
   },
@@ -15,6 +19,7 @@
     "jest": "^26.6.3"
   },
   "dependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "yargs": "^17.6.0"
   }
 }
